v6.1
-----
+ Added a "Popular" tab on the homepage to browse the most-played games on Steam
+ Added a secret...
+ Gift transactions are now separated out in total spent section of account page
+ Selecting booster packs in your inventory now shows the average price of three cards for that game
+ Added option to only search within product names

v6.0.1
-----
+ Added filter to the new release section that will filter out older games (thanks TotalBiscuit!)
: Fixed a bug on wishlist pages where price history would remain after making changes
: Fixed a bug on the market page caused by layout changes
: Fixed a bug on sub pages that caused price history not to display

v6.0
-----
+ Added warning dialog when browsing Steam in a language other than your preferred language
+ Added price history information to the wishlist page when hovering over a game
+ Added option to display store page videos using HTML5 player instead of Flash
+ Added library filtering options by genre and by category
+ Added coupon discount percentage to display on coupon tags
+ Added your personal achievement stats back to app pages in the "My Activity" box
: Fixed a bug that caused Early Access overlays to incorrectly show on games with coupons
: Fixed header links inserted by Enhanced Steam not displaying due to a change made by Valve
: Fixed a bug in some languages where badge filtering didn't work properly
: Fixed a bug in entering custom amounts into Steam wallet page
: Enhanced Steam will now display the highest % off coupon you have available on app pages

v5.9
-----
+ Added a link on user profiles to their wishlist
+ Added back the achievement section to app pages that Valve mysteriously removed
+ Added sorting options to achievement pages, and the ability to sort by date unlocked
+ Added option to hide all Early Access games on the homepage and search results
+ Added badge completion and value of card drops to badges page based on avg card price