@@ -743,3 +743,15 @@ input[type=checkbox].es_dlc_selection:checked + label {
 	line-height: 32px;
 	margin-left: 5px;
 }
+#game_background {
+	height: 700px !important;
+	background-size: 100%;
+	display: none;
+}
+#es_background_gradient {
+	height: 700px;
+	position: absolute;
+	width: 100%;
+	background: -webkit-linear-gradient(rgba(255,255,255,0),rgba(255,255,255,0),rgba(0,0,0,1));
+	z-index: 999;
+}
